<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/default_bg_color"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="2dp"
                android:paddingTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civAvatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/mine_default_avatar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/civAvatar"
                    android:layout_toRightOf="@+id/civAvatar"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAnchorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="text"
                        android:textSize="18sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_"
                            android:textColor="@color/room_table_text_color"
                            android:textSize="11sp"/>

                        <TextView
                            android:id="@+id/tvAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="11sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/l"
                            android:textColor="@color/room_table_text_color"
                            android:textSize="11sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fans_"
                            android:textColor="@color/room_table_text_color"
                            android:textSize="11sp"/>

                        <TextView
                            android:id="@+id/tvFans"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="11sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/l"
                            android:textColor="@color/room_table_text_color"
                            android:textSize="11sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zhandouli_"
                            android:textColor="@color/room_table_text_color"
                            android:textSize="11sp"/>

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="11sp"/>
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/img_zhibojian_shu_zhubo_tg"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/live_notice"
                    android:textColor="@color/room_lable_title_color"
                    android:textSize="14sp"/>

                <include layout="@layout/include_divider_line"/>

                <TextView
                    android:id="@+id/tvStartLiveTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:textColor="@color/room_lable_content_color"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/img_zhibojian_shu_zhubo_gerenziliao"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/personal_information"
                    android:textColor="@color/room_lable_title_color"
                    android:textSize="14sp"/>

                <include layout="@layout/include_divider_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/age"
                        android:textColor="@color/room_lable_color"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secrecy"
                        android:textColor="@color/room_lable_content_color"
                        android:textSize="14sp"/>
                </LinearLayout>

                <include layout="@layout/include_divider_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/emotional_state"
                        android:textColor="@color/room_lable_color"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvEmotionalState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secrecy"
                        android:textColor="@color/room_lable_content_color"
                        android:textSize="14sp"/>
                </LinearLayout>

                <include layout="@layout/include_divider_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location"
                        android:textColor="@color/room_lable_color"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outer_space"
                        android:textColor="@color/room_lable_content_color"
                        android:textSize="14sp"/>
                </LinearLayout>

                <include layout="@layout/include_divider_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/occupation"
                        android:textColor="@color/room_lable_color"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvOccupation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secrecy"
                        android:textColor="@color/room_lable_content_color"
                        android:textSize="14sp"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>